# RP2040-Interactive-Glitcher

./: .gitignore  .gitmodules  LICENSE  README.md  config.json  glitcher.py
firmware/: .gitignore  pio_glitch.uf2
firmware/pio_glitcher/: .gitignore  CMakeLists.txt  glitch.c  glitch.pio  pico_sdk_import.cmake
impl/: stm8.py  stm8_mod.py  stm8_uart.py
